--- a/web-developer.html
+++ b/web-developer.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -174,7 +174,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p>vor 1 Tag ... TwinCap GmbH has a job opening for Web Developer (Angular) in Z?rich (
 published: 19.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://workable.com/j/8AA2F32390'>Ignite Hospitality - Jobs: Web Developer (PHP, Wordpress) - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/8AA2F32390'>Ignite Hospitality - Jobs: Web Developer (PHP, Wordpress) - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Web Developer (PHP, Wordpress) at Ignite Hospitality.</p>
 <hr/>
@@ -289,7 +289,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer'>Web Developer - LTD Global - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer'>Web Developer - LTD Global - Career Page</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -360,7 +360,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MindMaze/743999686938995-front-end-web-developer'>MindMaze Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MindMaze/743999686938995-front-end-web-developer'>MindMaze Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -379,7 +379,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://levelset.applytojob.com/apply/Hf704hNGfp/Wordpress-PHP-Web-Developer-Marketing-Wizard'>Wordpress &amp; PHP Web Developer || Marketing Wizard - Levelset - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/Hf704hNGfp/Wordpress-PHP-Web-Developer-Marketing-Wizard'>Wordpress &amp; PHP Web Developer || Marketing Wizard - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -415,7 +415,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PrometheusGroup/743999684299989--net-web-developer'>Prometheus Group .Net Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PrometheusGroup/743999684299989--net-web-developer'>Prometheus Group .Net Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -467,7 +467,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
