--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
+      Postdoc Interne Geneeskunde  (B.19.MB.EO.72) - LUMC
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://lumc.recruitee.com/l/nl/o/internistouderengeneeskunde-opname-en-herstel-afdeling-b19mbeo69'>
+      Internist-ouderengeneeskunde Opname en Herstel afdeling (B.19.MB.EO.69) - LUMC
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999692189123-internship-project-product-manager'>Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -57,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -129,7 +141,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luminus.recruitee.com/l/nl/o/energy-portfolio-optimisation-internship'>
+<h5><a href='https://luminus.recruitee.com/l/nl/o/energy-portfolio-optimisation-internship'>
       Energy Portfolio Optimisation Internship - Luminus
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -151,7 +163,7 @@
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787205'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787205'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -167,7 +179,7 @@
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787230'>Job Application for Sales Operations Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787230'>Job Application for Sales Operations Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -251,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364005002'>Job Application for Internship in Accounts Payable - Freight at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -264,6 +276,21 @@
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
+<hr/>
+<h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... ... of information and think critically; Outstanding excel skills; Excellent 
+presentation and ability to talk to clients (from Data Analyst to Chief Revenue 
+Officer!)</p>
+<hr/>
+<h5><a href='https://stuart.workable.com/j/3D3DEEAB92?viewed=true'>Stuart - Jobs: Operations Data Analyst Intern (new business unit ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
+Stuart.</p>
+<hr/>
+<h5><a href='https://inmagine.workable.com/j/6171DCA3AE?viewed=true'>Jobs: Internship-Product Marketing Analyst - Apply online - Inmagine</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Apply online for the job of Internship-Product Marketing Analyst at Inmagine.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/tourlane/jobs/1787171'>Job Application for FP&amp;A Analyst (f/d/m) (Intern)  at Tourlane</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -281,7 +308,7 @@
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4369594002'>Job Application for Help Desk IT Intern (Part Time) at WELL Health Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4369594002'>Job Application for Help Desk IT Intern (Part Time) at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -323,7 +350,7 @@
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://green-street-advisors-inc.workable.com/j/FFDFD6AD42'>Green Street Advisors, LLC - Jobs: Marketing / Graphic Design Intern - Apply online</a></h5> 
+<h5><a href='https://green-street-advisors-inc.workable.com/j/FFDFD6AD42'>Green Street Advisors, LLC - Jobs: Marketing / Graphic Design Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom North America</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -339,11 +366,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://artnight.join.com/jobs/264645-internship-french-expansion-m-f-x'>Job @ ArtNight (Berlin): Internship: French Expans... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artnight.join.com/jobs/264645-internship-french-expansion-m-f-x'>Job @ ArtNight (Berlin): Internship: French Expans... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://artnight.join.com/jobs/266542-marketing-intern-netherlands-f-m-x'>Job @ ArtNight (Berlin): Marketing Intern Netherla... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artnight.join.com/jobs/266542-marketing-intern-netherlands-f-m-x'>Job @ ArtNight (Berlin): Marketing Intern Netherla... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -367,7 +394,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://marketplacedistri.join.com/jobs/258473-internship-content-marketeer-it-in-lucca-tuscany-fast-growing-international-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/258473-internship-content-marketeer-it-in-lucca-tuscany-fast-growing-international-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -385,7 +412,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/helpsystems/job/oKPBafw4'>HelpSystems Careers - Sales Intern/Trainee</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/helpsystems/job/oKPBafw4'>HelpSystems Careers - Sales Intern/Trainee</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -413,7 +440,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/a3pOVFXv29/Intern-Council-Of-Women-World-Leaders'>Intern, Council of Women World Leaders - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/a3pOVFXv29/Intern-Council-Of-Women-World-Leaders'>Intern, Council of Women World Leaders - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -434,30 +461,6 @@
 <p>6 days ago ... Operations/Data management Intern. Bangalore. Delivery ? Operations. 
 Internship. Apply for this job. Founded in 2016, Meero aims to revolutionize the 
 world of?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1791580'>Job Application for Production Design Intern at GSW Sports, LLC</a></h5> 
-<p><span class="badge badge-light">Oakland, California</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/o3BCafwa'>Trek Bicycle Careers - Marketing Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/olMBafwC'>Universal Music Group Careers - A&amp;R Intern</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://taxfix.recruitee.com/o/talent-acquisition-and-employer-branding-intern'>
-      Talent Acquisition and Employer Branding Intern - Taxfix
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://indacareer.recruitee.com/o/influencer-relations-intern-1'>
-      Influencer Relations Intern - indaHash
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
 <hr/>
 
 
